src/tui/snapshots/mysteries__tui__render__tests__tui_paste_fold_single_line_input.snap
---
source: src/tui/render.rs
expression: output
---
✦ mysteries  agent · v1.3.0

────────────────────────────────────────────────────────────────────────────────


                                  ✦ MYSTERIES
                         AGENT · v1.3.0 · 终端编码助手
        读只读,写必询 —— 每一次文件改动与命令执行,都先把 diff 摊给你,等
                               你按下 y 才动手。

                                     试试 ↓
                   〔任务〕 给 Config 加 timeout_secs 字段
                   〔/help〕 查看内置命令
                   〔/status〕 当前会话快照
                   〔错误〕 演示:鉴权失败(致命错误,终止 Loop)



◇ 就绪
┌──────────────────────────────────────────────────────────────────────────────┐
│> [Pasted text #1 +600 chars]                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
mock · mock-model · iter 0/4 · 0 msgs · .
▸ normal · shift+tab 切换 · think low
