src/tui/snapshots/mysteries__tui__render__tests__tui_permission_state.snap
---
source: src/tui/render.rs
expression: text
---
✦ mysteries  agent · v1.0

────────────────────────────────────────────────────────────────────────────────
✦ MYSTERIES
AGENT · v1.0 · 终端编码助手
读只读,写必询 —— 每一次文件改动与命令执行,都先把 diff 摊给你,等你按下 y 才动手。
试试 ↓
〔任务〕 给 Config 加 timeout_secs 字段
〔/help〕 查看内置命令
〔/status〕 当前会话快照
〔错误〕 演示:鉴权失败(致命错误,终止 Loop)


┌──────────────────────────────────────────────────────────────────────────────┐
│▲ 需要授权                                                                    │
│tool: write_file                                                              │
│args: {"content":"hello","path":"note.txt"}                                   │
│[y · 允许]   [n · 拒绝]                                                       │
│提示:Enter = 允许 · Esc = 拒绝                                                │
└──────────────────────────────────────────────────────────────────────────────┘
status: 等待授权
┌──────────────────────────────────────────────────────────────────────────────┐
│mysteries ▸ 输入任务,或 / 执行命令…                                           │
└──────────────────────────────────────────────────────────────────────────────┘
