src/tui/snapshots/mysteries__tui__render__tests__tui_permission_state_daylight.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────‹/›

‹border.subtle›┌─ ‹/›‹success.fg›✓‹/›‹text.muted› ‹/›‹accent.primary +bold›read_file‹/›‹text.muted› {"limit":40,"offset":0,"path":"schema.rs"}‹/›‹text.secondary›  只读 · 自动运行‹/›
‹border.subtle›│ ‹/›‹text.body›pub struct Config {‹/›
‹border.subtle›│ ‹/›‹text.body›    pub model: String,‹/›
‹border.subtle›│ ‹/›‹text.body›    pub max_iterations: u32,‹/›
‹border.subtle›│ ‹/›‹text.body›}‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────‹/›

‹warning.fg bg=warning.bg›┌──────────────────────────────────────────────────────────────────────────────┐‹/›
‹warning.fg bg=warning.bg›│‹/›‹warning.fg bg=warning.bg +bold›▲ 需要授权‹/›‹text.title bg=warning.bg›                                                                    ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹text.secondary bg=warning.bg›tool: ‹/›‹accent.primary bg=warning.bg›edit_file‹/›‹text.title bg=warning.bg›                                                               ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹text.secondary bg=warning.bg›args: ‹/›‹text.body bg=warning.bg›path=src/config/mod.rs‹/›‹text.title bg=warning.bg›                                                  ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹error.fg bg=warning.bg›−     pub max_iterations: u32,‹/›‹text.title bg=warning.bg›                                                ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹success.fg bg=warning.bg›+     pub timeout_secs: u64,‹/›‹text.title bg=warning.bg›                                                  ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│[y · 允许]‹/›‹text.body bg=warning.bg›   ‹/›‹error.fg bg=warning.bg›[n · 拒绝]‹/›‹text.title bg=warning.bg›                                                       ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹text.secondary bg=warning.bg›提示:Enter = 允许 · Esc = 拒绝‹/›‹text.title bg=warning.bg›                                                ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›└──────────────────────────────────────────────────────────────────────────────┘‹/›
‹text.secondary›status: ‹/›‹warning.fg›▲ 等待授权…‹/›
‹border.subtle›┌──────────────────────────────────────────────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›mysteries ▸ ‹/›‹text.muted›输入任务,或 / 执行命令…‹/›‹text.title›                                           ‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────┘‹/›
