src/tui/snapshots/mysteries__tui__render__tests__tui_phase_status_lines.snap
---
source: src/tui/render.rs
expression: text
---
idle: ‹text.secondary›status: ‹/›‹text.muted›◇ 就绪‹/›
calling: ‹text.secondary›status: ‹/›‹accent.primary›⠸ 调用模型…‹/›
executing: ‹text.secondary›status: ‹/›‹accent.primary›⠸ 执行 write_file…‹/›
waiting: ‹text.secondary›status: ‹/›‹warning.fg›▲ 等待授权…‹/›
